html dosyasının srcleri düzeltildi

--- a/SignalR/wwwroot/SignalR/index.html
+++ b/SignalR/wwwroot/SignalR/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="signalr.min.js"></script>
-    <script src="jquery.min.js"></script>
+    <script src="../SignalR/signalr.min.js"></script>
+    <script src="../SignalR/jquery.min.js"></script>
 
 <script>
     $(document).ready(()=>{
@@ -39,7 +39,7 @@
 </head>
 <body>
     <input type="text" id="txtMessage">
-    <button id="btnGonder">Gönder</button>
+    <button id="btnGonder">Gonder</button>
 
 <div></div>
 
